major guide update