@@ -71,3 +71,114 @@ Codename:	bionic
 ```
 sudo hostnamectl set-hostname data-management.local
 ```
+- Then, open /etc/hosts by running `sudo nano /etc/hosts` and add the following line:
+```
+127.0.0.1 data-management.local
+```
+- Then, open the /etc/cloud/cloud.cfg file by running `sudo nano /etc/cloud/cloud.cfg` and change the `preserve_hostname` parameter from `false` to `true`.
+
+### Installing Java 8
+
+- Run the following to install Java 8: `sudo apt-get install openjdk-8-jre-headless`
+- This guide was written with the following version (produced running `java -version`):
+
+```
+openjdk version "1.8.0_212"
+OpenJDK Runtime Environment (build 1.8.0_212-8u212-b03-0ubuntu1.18.04.1-b03)
+OpenJDK 64-Bit Server VM (build 25.212-b03, mixed mode)
+```
+
+### Installing MySQL Server
+
+- Run the following to install MySQL Server: `sudo apt-get install mysql-server`  
+- If prompted, set the password of the root user during installation to `data`
+
+#### Setting up MySQL Server
+
+- Log-in: `sudo mysql -uroot -pdata` (this opens the MySQL command line interface using the `root` user and `data` password)
+- The following should now appear (indicating that you are succesfully in the MySQL CLI): `mysql>`
+- Create a user: `CREATE USER 'data'@'%' IDENTIFIED BY 'data';` (this will throw an error if run more than once)
+- Create databases:
+```
+CREATE DATABASE IF NOT EXISTS 'openhds';
+CREATE DATABASE IF NOT EXISTS 'odk_prod';
+```
+- Grant access privileges to user:
+`GRANT ALL ON *.* TO 'data'@'%';`
+- Flush privileges: `flush privileges;`
+- Grant outside access to MySQL (optional): Comment out the line starting with `Bind-Address` by adding a `#` prior to it in `/etc/mysql/my.cnf`, and then restart MySQL-service by running: `sudo service mysql restart`
+
+### Installing Tomcat 8
+
+- Run the following `sudo apt install tomcat8`
+- Run a package update: `sudo apt-get update`
+- Ensure tomcat is up and running: `sudo service tomcat8 start`
+- Set `JAVA_HOME` variable in `/etc/environment`: `sudo nano /etc/environment` and add line like `JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"`
+- Run `source /etc/environment`
+- If issues with `JAVA_HOME`, uncomment the `JAVA_HOME` line in `/etc/default/tomcat8/` and set it to the java installation folder. For example:
+```
+JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"
+```
+- Install tomcat8 admin: `sudo apt-get install tomcat8-admin`
+- Edit `etc/tomcat8/tomcat-users.xml` by running `sudo nano /etc/tomcat8/tomcat-users.xml`
+- In the `tomcat-users` section, create a new role by adding the following lines:
+```
+<role rolename="manager-gui" />
+<user username="data" password="data" roles="manager-gui" />
+```
+- Restart the tomcat service: `sudo service tomcat8 restart`
+- Increase memory allocation to Tomcat: `sudo nano /etc/default/tomcat8` and replace  the line starting with `JAVA_OPTS=` with the following:
+```
+JAVA_OPTS="-Djava.awt.headless=true -Xmx1024M -Xms1024M -XX:+UseConcMarkSweepGC"
+```
+- Ensure that everything is working up until now by ssh-tunneling. Something similar to the below code (with AWS endpoints and `.pem` file location adjusted appropriately):
+```
+ssh -i /home/joebrew/.ssh/openhdskey.pem -N -L 8999:ec2-3-17-72-248.us-east-2.compute.amazonaws.com:8080 ubuntu@ec2-3-17-72-248.us-east-2.compute.amazonaws.com -v
+```
+
+Then, on your local machine, open the following url in a web browser: http://localhost:8999/manage. You can now log-in as Username: `data` and Password: `data`. Once logged-in, the below will appear in the web browswer.
+
+![](img/tomcat.png)
+
+
+### Installing the MySQL-J Connector
+
+
+- Install the mysql lib package with `sudo apt-get install libmysql-java` which will put the MySQL connector into `/usr/share/java`
+- `cd` to `/usr/share/tomcat8/lib`
+- Create a symbolic link:
+```
+sudo ln -s ../../java/mysql-connector-java-5.1.45.jar mysql-connector-java-5.1.45.jar
+sudo ln -s ../../java/mysql.jar mysql.jar
+```
+- Restart the Tomcat service: `sudo service tomcat8 restart`
+
+### Install SSH-server
+
+```
+sudo apt-get install -y openssh-server
+```
+- Ensure it's up and running `sudo service ssh status`
+
+
+### Getting and setting up openhds
+
+- Run the following to download openhds-server
+```
+cd /home/ubuntu
+mkdir openhds
+cd openhds
+wget https://github.com/SwissTPH/openhds-server/releases/download/openhds-1.6/openhds.war
+```
+- If you need to edit fields, do the below and then re-jar
+  - Extract via: `unzip openhds.war`
+  - Edit the fields in `WEB-INF/classes/database.properties` to ensure that `dbURL`, `dbUser` and `dbPass` are adequate (only if changed from this guide)
+  - Put everything back in the .war file: `rm openhds.war; jar -cvf openhds.war *`
+
+### Deploying OpenHDS in Tomcat
+- If running on a remote server (ie, AWS EC2), you'll need to tunnel. For example:
+```
+ssh -i /home/joebrew/.ssh/openhdskey.pem -N -L 8999:ec2-3-17-72-248.us-east-2.compute.amazonaws.com:8080 ubuntu@ec2-3-17-72-248.us-east-2.compute.amazonaws.com -v
+```
+
+sudo nano /etc/tomcat8/server.xml (changed 8080 to 8081)
